build_log.txt
> Task :app:preBuild UP-TO-DATE
> Task :app:preDebugBuild UP-TO-DATE
> Task :app:mergeDebugNativeDebugMetadata NO-SOURCE
> Task :app:checkKotlinGradlePluginConfigurationErrors SKIPPED
> Task :app:checkDebugAarMetadata UP-TO-DATE
> Task :app:generateDebugResValues UP-TO-DATE
> Task :app:mapDebugSourceSetPaths UP-TO-DATE
> Task :app:generateDebugResources UP-TO-DATE
> Task :app:mergeDebugResources UP-TO-DATE
> Task :app:packageDebugResources UP-TO-DATE
> Task :app:parseDebugLocalResources UP-TO-DATE
> Task :app:createDebugCompatibleScreenManifests UP-TO-DATE
> Task :app:extractDeepLinksDebug UP-TO-DATE
> Task :app:processDebugMainManifest UP-TO-DATE
> Task :app:processDebugManifest UP-TO-DATE
> Task :app:processDebugManifestForPackage UP-TO-DATE
> Task :app:processDebugResources UP-TO-DATE
> Task :app:kspDebugKotlin UP-TO-DATE
> Task :app:compileDebugKotlin UP-TO-DATE
> Task :app:javaPreCompileDebug UP-TO-DATE
> Task :app:compileDebugJavaWithJavac UP-TO-DATE
> Task :app:mergeDebugShaders UP-TO-DATE
> Task :app:compileDebugShaders NO-SOURCE
> Task :app:generateDebugAssets UP-TO-DATE
> Task :app:mergeDebugAssets UP-TO-DATE
> Task :app:compressDebugAssets UP-TO-DATE
> Task :app:l8DexDesugarLibDebug UP-TO-DATE
> Task :app:desugarDebugFileDependencies UP-TO-DATE
> Task :app:hiltAggregateDepsDebug UP-TO-DATE

> Task :app:hiltJavaCompileDebug FAILED
D:\Myna-Bell\app\build\generated\hilt\component_sources\debug\com\myna\bell\MynaBellApp_HiltComponents.java:147: error: [Dagger/MissingBinding] com.myna.bell.domain.AlarmScheduler cannot be provided without an @Provides-annotated method.
  public abstract static class SingletonC implements MynaBellApp_GeneratedInjector,
                         ^
  
      com.myna.bell.domain.AlarmScheduler is injected at
          [com.myna.bell.MynaBellApp_HiltComponents.SingletonC] com.myna.bell.receiver.BootReceiver.alarmScheduler
      com.myna.bell.receiver.BootReceiver is injected at
          [com.myna.bell.MynaBellApp_HiltComponents.SingletonC] com.myna.bell.receiver.BootReceiver_GeneratedInjector.injectBootReceiver(com.myna.bell.receiver.BootReceiver)
  It is also requested at:
      com.myna.bell.ui.alarm.AlarmViewModel(…, alarmScheduler)
  The following other entry points also depend on it:
      dagger.hilt.android.internal.lifecycle.HiltViewModelFactory.ViewModelFactoriesEntryPoint.getHiltViewModelMap() [com.myna.bell.MynaBellApp_HiltComponents.SingletonC ? com.myna.bell.MynaBellApp_HiltComponents.ActivityRetainedC ? com.myna.bell.MynaBellApp_HiltComponents.ViewModelC]
1 error

[Incubating] Problems report is available at: file:///D:/Myna-Bell/build/reports/problems/problems-report.html

FAILURE: Build failed with an exception.

* What went wrong:
Execution failed for task ':app:hiltJavaCompileDebug'.
> Compilation failed; see the compiler output below.
  D:\Myna-Bell\app\build\generated\hilt\component_sources\debug\com\myna\bell\MynaBellApp_HiltComponents.java:147: error: [Dagger/MissingBinding] com.myna.bell.domain.AlarmScheduler cannot be provided without an @Provides-annotated method.
    public abstract static class SingletonC implements MynaBellApp_GeneratedInjector,
                           ^
    
        com.myna.bell.domain.AlarmScheduler is injected at
            [com.myna.bell.MynaBellApp_HiltComponents.SingletonC] com.myna.bell.receiver.BootReceiver.alarmScheduler
        com.myna.bell.receiver.BootReceiver is injected at
            [com.myna.bell.MynaBellApp_HiltComponents.SingletonC] com.myna.bell.receiver.BootReceiver_GeneratedInjector.injectBootReceiver(com.myna.bell.receiver.BootReceiver)
    It is also requested at:
        com.myna.bell.ui.alarm.AlarmViewModel(…, alarmScheduler)
    The following other entry points also depend on it:
        dagger.hilt.android.internal.lifecycle.HiltViewModelFactory.ViewModelFactoriesEntryPoint.getHiltViewModelMap() [com.myna.bell.MynaBellApp_HiltComponents.SingletonC ? com.myna.bell.MynaBellApp_HiltComponents.ActivityRetainedC ? com.myna.bell.MynaBellApp_HiltComponents.ViewModelC]
  1 error

* Try:
> Check your code and dependencies to fix the compilation error(s)
> Run with --scan to get full insights.

BUILD FAILED in 4s
24 actionable tasks: 1 executed, 23 up-to-date
